[package]
name = "ai-hole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
lol_html = "1.2.0"
rand = "0.8.5"
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
